--- a/src/App.css
+++ b/src/App.css
@@ -41,8 +41,10 @@
     flex-direction: column;
 
     background-color: #035E7B;
-    
+    opacity: 1;
+
     color: #EEFCF8;
+    text-align: center;
 
     transition: 2s;
 }
@@ -59,7 +61,9 @@
     height: 100%;
 
     background-color: #EEFCF8;
+    opacity: 1;
 
+    font-weight: bold;
     color: #035E7B;
 
     transition: 2s;
@@ -71,4 +75,28 @@
 
 .send-left{
     right: 35%;
+}
+
+
+.SignUp{
+    width: 100%;
+    flex-direction: column;
+}
+.SignIn{
+    width: 100%;
+    flex-direction: column;
+}
+
+.sign-up-form{
+    width: 50%;
+    flex-direction: column;
+}
+
+.sign-up-form > label{
+    padding: 0.5em;
+    width: 100%
+}
+
+.sign-up-form > label > input{
+    width: 100%
 }
